--- a/themes/dream/layouts/partials/header.html
+++ b/themes/dream/layouts/partials/header.html
@@ -1,8 +1,8 @@
 <article class="dream-header">
   <section class="ui top attached center aligned segment">
     <div class="ui small circular image">
-      {{ if isset .Site.Params "avatar" }}
-        <img src="{{ .Site.Params.avatar | relURL }}">
+      {{ if true }}
+        <img src="/a.jpg">
       {{ end }}
     </div>
 
